<resources>
    <string name="app_name">WebChatSocket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="open">Open</string>
    <string name="enter_name">Enter name</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="edit_text">Edit text</string>
    <string name="send">Send</string>
</resources>